force-app/main/default/objects/Throttle_Settings__mdt.object
<CustomObject>
    <description>Used to filter the number of requests which go to Callista for the Application integration</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the rule is being applied or not</description>
        <inlineHelpText>Defines if the rule is being applied or not</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of filter which is defined for the rule e.g Channel, Location etc...</description>
        <inlineHelpText>Type of filter which is defined for the rule e.g Channel, Location etc...</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Channel</fullName>
                    <default>true</default>
                    <label>Channel</label>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>PreviousMonashStudent</fullName>
                    <label>Previous Monash Student</label>
                </value>
                <value>
                    <fullName>CreditIntention</fullName>
                    <label>Credit Intention</label>
                </value>
                <value>
                    <fullName>ResidencyStatus</fullName>
                    <label>Residency Status</label>
                </value>
                <value>
                    <fullName>ACPPreferenceSubType</fullName>
                    <label>ACP Preference SubType</label>
                </value>
                <value>
                    <fullName>CourseCode</fullName>
                </value>
                <value>
                    <fullName>PreviousStudentCheck</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Defines what the rule is measured against.</description>
        <inlineHelpText>Defines what the rule is measured against.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Throttle Setting</label>
    <pluralLabel>Throttle Settings</pluralLabel>
</CustomObject>